--- a/CardGames/CardGames-Info.plist
+++ b/CardGames/CardGames-Info.plist
@@ -15,6 +15,7 @@
 			<key>CFBundleIconFiles</key>
 			<array>
 				<string>ic_launcher_card_games.png</string>
+				<string>icon.png</string>
 			</array>
 		</dict>
 	</dict>
