--- a/CardGames/CardGames-Info.plist
+++ b/CardGames/CardGames-Info.plist
@@ -9,19 +9,9 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIcons</key>
-	<dict>
-		<key>CFBundlePrimaryIcon</key>
-		<dict>
-			<key>CFBundleIconFiles</key>
-			<array>
-				<string>ic_launcher_card_games.png</string>
-				<string>icon.png</string>
-				<string>icon-retina.png</string>
-				<string>icon-ipad.png</string>
-				<string>icon-ipad-retina.png</string>
-			</array>
-		</dict>
-	</dict>
+	<dict/>
+	<key>CFBundleIcons~ipad</key>
+	<dict/>
 	<key>CFBundleIdentifier</key>
 	<string>com.worthwhilegames.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
